--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "pg-file-template-edtior",
-  "version": "1.0.0",
+  "name": "pg-file-template-editor",
+  "version": "0.0.3",
   "private": false,
   "author": "PG",
   "main": "public/build/file-template-editor.js",
   "license": "MIT",
+  "description": "文件模板在线编辑器",
   "files": [
     "public/build"
   ],
@@ -30,8 +31,8 @@
     "purgecss-webpack-plugin": "^4.1.3",
     "purify-css": "^1.2.5",
     "sass-loader": "^12.4.0",
-    "svelte": "^3.31.2",
-    "svelte-loader": "^3.0.0",
+    "svelte": "^3.44.2",
+    "svelte-loader": "^3.1.2",
     "terser-webpack-plugin": "^5.3.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.16.0",
@@ -43,6 +44,8 @@
     "dev": "webpack serve --content-base public"
   },
   "dependencies": {
+    "date-fns": "^2.27.0",
+    "date-picker-svelte": "^1.1.1",
     "uikit": "^3.9.4"
   }
 }
