--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg-file-template-editor",
-  "version": "0.0.3",
+  "version": "1.1.0",
   "private": false,
   "author": "PG",
   "main": "public/build/file-template-editor.js",
@@ -22,7 +22,7 @@
     "babel-loader": "^8.2.3",
     "core-js": "3",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
+    "css-loader": "^6.5.1",
     "glob": "^7.2.0",
     "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^7.0.0",
@@ -31,7 +31,8 @@
     "purgecss-webpack-plugin": "^4.1.3",
     "purify-css": "^1.2.5",
     "sass-loader": "^12.4.0",
-    "svelte": "^3.44.3",
+    "style-loader": "^3.3.1",
+    "svelte": "3.39.0",
     "svelte-loader": "^3.1.2",
     "terser-webpack-plugin": "^5.3.0",
     "url-loader": "^4.1.1",
@@ -40,7 +41,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
     "dev": "webpack serve --content-base public"
   },
   "dependencies": {
