--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg-file-template-editor",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": false,
   "author": "PG",
   "main": "public/build/file-template-editor.js",
@@ -23,9 +23,11 @@
     "core-js": "3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
     "glob": "^7.2.0",
     "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^7.0.0",
+    "patch-package": "^6.4.7",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
     "purgecss-webpack-plugin": "^4.1.3",
@@ -43,11 +45,11 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "dev": "webpack serve --content-base public"
+    "dev": "webpack serve --content-base public",
+    "postinstall":"patch-package"
   },
   "dependencies": {
-    "date-fns": "^2.27.0",
-    "date-picker-svelte": "^1.1.1",
+    "froala-editor": "^4.0.8",
     "uikit": "^3.9.4"
   }
 }
