--- a/.babelrc
+++ b/.babelrc
@@ -9,13 +9,14 @@
     ]
   ],
   "plugins": [
+    "@babel/plugin-proposal-optional-chaining",
     [
       "@babel/plugin-transform-runtime",
       {
         "corejs": false,
         "helpers": false,
         "regenerator": false,
-        "useESModules": false
+        "useESModules": true
       }
     ]
   ],
